fixed datatable row alignment

--- a/client/src/app/pages/settings/data-source/data-source.component.scss
+++ b/client/src/app/pages/settings/data-source/data-source.component.scss
@@ -6,3 +6,6 @@
   background-color: currentColor;
   margin-right: 5px;
 }
+.address-nck {
+  margin: -3px 0;
+}
